[package]
name = "cryptopal_chalenge"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
hex = "0.4"
aes="0.7.5"
block-modes="0.8.1"
block-padding = "0.2"
hex-literal="0.3.3"
rand = "0.8"
urlencoding = "2.1"
panic = "0.4.0"
digest = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num = "0.4.3"
num-traits = "0.2.19"
sha256 = "1.6.0"
hmac = "0.12" 
sha2 = "0.10"
num-primes = "0.3.0"
